force-app/main/default/objects/MarketIntelligence__c/MarketIntelligence__c.object-meta.xml
<CustomObject>
    <label>Market Intelligence</label>
    <nameField>
        <displayFormat>MktIntel{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>