force-app/main/default/objects/MarketIntelligence__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <description>Created by EB on 19-Apr-17 for CCC &amp; GEOS for Sprint1</description>
    <formula>TEXT(Product__r.Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business</label>
    <type>Text</type>
</CustomField>