force-app/main/default/objects/MarketIntelligence__c/fields/BusinessDetail__c.field-meta.xml
<CustomField>
    <fullName>BusinessDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by EB for CCC &amp; GEOS to update Cluster feild as on 19-Apr-17</description>
    <label>Business Detail</label>
    <referenceTo>BusinessDetail__c</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>Market_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>