force-app/main/default/objects/MarketIntelligence__c/fields/CaptiveDemand__c.field-meta.xml
<CustomField>
    <fullName>CaptiveDemand__c</fullName>
    <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
    <label>Captive Demand</label>
    <summarizedField>MarketIntelligenceDetail__c.CaptiveDemand__c</summarizedField>
    <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>