force-app/main/default/objects/MarketIntelligence__c/fields/CompetitorAnnualVolume__c.field-meta.xml
<CustomField>
    <fullName>CompetitorAnnualVolume__c</fullName>
    <label>Competitor Annual Volume</label>
    <summarizedField>MarketIntelligenceDetail__c.AnnualVolume__c</summarizedField>
    <summaryFilterItems>
        <field>MarketIntelligenceDetail__c.IsCargillSupplier__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>