force-app/main/default/objects/MarketIntelligence__c/fields/CompetitorProduct__c.field-meta.xml
<CustomField>
    <fullName>CompetitorProduct__c</fullName>
    <label>Competitor Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>