force-app/main/default/objects/MarketIntelligence__c/fields/CustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfile__c</fullName>
    <label>Customer Profile</label>
    <referenceTo>CustomerProfile__c</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>Market_Intelligence</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>