force-app/main/default/objects/MarketIntelligence__c/fields/PctMarketShare__c.field-meta.xml
<CustomField>
    <fullName>PctMarketShare__c</fullName>
    <formula>IF( TotalAnnualVolume__c  &lt;&gt; 0,  CargillAnnualVolume__c  /  TotalAnnualVolume__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Market Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>