force-app/main/default/objects/MarketIntelligence__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>MarketIntelligence</relationshipName>
    <type>Lookup</type>
</CustomField>