force-app/main/default/objects/MarketIntelligence__c/fields/ReferredtoDistributor__c.field-meta.xml
<CustomField>
    <fullName>ReferredtoDistributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isDistributor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Intelligence (Referred to Distributor)</relationshipLabel>
    <relationshipName>Market_Intelligence1</relationshipName>
    <type>Lookup</type>
</CustomField>