force-app/main/default/objects/MarketIntelligence__c/fields/TotalAnnualVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalAnnualVolume__c</fullName>
    <label>Total Annual Volume</label>
    <summarizedField>MarketIntelligenceDetail__c.AnnualVolume__c</summarizedField>
    <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>