force-app/main/default/objects/MarketIntelligence__c/fields/TotalAnnualVolumeDisplay__c.field-meta.xml
<CustomField>
    <fullName>TotalAnnualVolumeDisplay__c</fullName>
    <formula>TEXT(TotalAnnualVolume__c) &amp;&quot; &quot;&amp; TEXT(UnitofMeasure__c)</formula>
    <label>Total Annual Volume</label>
    <type>Text</type>
</CustomField>